environments/dev/templates/ingress.yaml
---
# Source: simetrik/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simetrik-alb
  labels:
    helm.sh/chart: simetrik-0.1.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: simetrik
  annotations:
    alb.ingress.kubernetes.io/backend-protocol.grpc: "GRPC"
    alb.ingress.kubernetes.io/conditions.grpc: "[{\"field\":\"path-pattern\",\"pathPatternConfig\":{\"values\":[\"/grpc/*\"]}}]\n"
    alb.ingress.kubernetes.io/healthcheck-path: "/health"
    alb.ingress.kubernetes.io/healthcheck-port: "traffic-port"
    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTP"
    alb.ingress.kubernetes.io/listen-ports: "[{\"HTTP\": 80}, {\"HTTPS\": 443}]"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: "ip"
    kubernetes.io/ingress.class: "alb"
spec:
  rules:
  - http:
      paths:
      - path: /dashboard/*
        pathType: Prefix
        backend:
          service:
            name: dashboard
            port:
              number: 3000
      - path: /grpc/*
        pathType: Prefix
        backend:
          service:
            name: server
            port:
              number: 50051
